# numix

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  matrix.rs  types.rs  vector.rs
