[package]
name = "numix"
version = "0.1.0"
edition = "2021"
description = "A fast, lightweight Rust library for math operations and numeric computations."
license = "MIT"
authors = ["Patrick Reese (Retroboi64) <https://github.com/Retroboi64>"]
copyright = "Copyright (c) 2025 Patrick Reese (Retroboi64)"
keywords = ["math", "numbers", "numeric", "rust", "computations"]
categories = ["math", "algorithm"]
readme = "README.md"
