[package]
name = "numix"
version = "0.1.4"
edition = "2024"
description = "A fast, lightweight Rust library for math operations and numeric computations."
license = "MIT"
authors = ["Patrick Reese"]
repository = "https://github.com/Retroboi64/numix"
keywords = ["math", "numbers", "numeric", "computations"]
categories = ["mathematics", "algorithms"]
readme = "README.md"
